<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Bevbot LLC <info@bevbot.com>
  ~
  ~ This file is part of the Kegtab package from the Kegbot project. For
  ~ more information on Kegtab or Kegbot, see <http://kegbot.org/>.
  ~
  ~ Kegtab is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free
  ~ Software Foundation, version 2.
  ~
  ~ Kegtab is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Kegtab. If not, see <http://www.gnu.org/licenses/>.
  -->
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="org.kegbot.app.SettingsActivity$GeneralFragment"
        android:title="@string/settings_general_header"
        />
    <header
        android:fragment="org.kegbot.app.SettingsActivity$AccessFragment"
        android:title="@string/settings_access_header"
        />
    <header
        android:fragment="org.kegbot.app.SettingsActivity$CameraPreferenceFragment"
        android:title="@string/settings_camera_header"
        />
    <header
        android:fragment="org.kegbot.app.SettingsActivity$KegeratorFragment"
        android:title="@string/settings_kegerator_header"
        />
    <header
        android:fragment="org.kegbot.app.SettingsActivity$AboutFragment"
        android:title="@string/settings_about_header"
        />

</preference-headers>
