<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="top|center_horizontal"
              android:background="@drawable/shape_rounded_rect">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_kegbot_url_url_name"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_kegbot_url_url_description"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/kegbotUrlScheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kegbot_url_scheme_http"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/kegbotUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="@string/example_url"/>

        </LinearLayout>

    <CheckBox
        android:id="@+id/useSsl"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_kegbot_url_use_ssl"/>

</LinearLayout>