<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Bevbot LLC <info@bevbot.com>
  ~
  ~ This file is part of the Kegtab package from the Kegbot project. For
  ~ more information on Kegtab or Kegbot, see <http://kegbot.org/>.
  ~
  ~ Kegtab is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free
  ~ Software Foundation, version 2.
  ~
  ~ Kegtab is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Kegtab. If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_rounded_rect">

    <RadioGroup
        android:id="@+id/backend_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_backend_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_select_backend_server"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallText"
            android:text="@string/setup_select_backend_server_description"
            android:layout_marginBottom="8dp"/>

        <RadioButton
            android:id="@+id/radio_backend_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_select_backend_local"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/smallText"
            android:text="@string/setup_select_backend_local_description"/>
    </RadioGroup>

</ScrollView>