<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Bevbot LLC <info@bevbot.com>
  ~
  ~ This file is part of the Kegtab package from the Kegbot project. For
  ~ more information on Kegtab or Kegbot, see <http://kegbot.org/>.
  ~
  ~ Kegtab is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free
  ~ Software Foundation, version 2.
  ~
  ~ Kegtab is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  ~ FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with Kegtab. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <view
        android:id="@+id/cameraPreview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        class="org.kegbot.app.camera.Preview"/>

    <Button
        android:id="@+id/cameraTakePictureButton"
        style="@style/mediumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraPreview"
        android:layout_centerHorizontal="true"
        android:text="@string/pour_take_picture"/>

    <LinearLayout
        android:id="@+id/cameraPostPictureButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cameraPreview"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1.0">

        <Button
            android:id="@+id/cameraDiscardPictureButton"
            style="@style/mediumButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/camera_discard_picture"/>

        <Button
            android:id="@+id/cameraTakeAnotherButton"
            style="@style/mediumButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/camera_take_another"/>
    </LinearLayout>

</RelativeLayout>